# notes

aws/alb-elb-5xxs/: README.md
cgo/: decoder.go
cgo/capi/: decoder_capi.cc  decoder_capi.h
cpp/websocket/: CMakeLists.txt
cpp/websocket/src/: thread_pool.cc  websocket_server_1.cc
cpy/: README.md  asr_decoder.py  decoder.cc  decoder.py  ws_server.py
envoy/: README.md  envoy_start.sh
envoy/etc_envoy/: envoy.yaml
envoy/etc_envoy/conf.d/: cds.yaml  lds.yaml
file-descriptor/: README.md
ml/: batch_norm.py  env_config.md  layer_norm.py
nginx/: README.md
stress_test/: README.md  go.mod  go.sum  main.go  run.sh
telegraf/: telegraf.conf
traefik/: README.md
traefik/demo/: docker-compose.yaml
traefik/traefik/: docker-compose.yaml
监控系统/: 常用软件安装.md  监控系统.md
监控系统/python_lib/: demo_server.py  log.py  stats_client.py  tornado_app.py
